Fix spacing issues on List component

--- a/src/styles/CourseItem.css
+++ b/src/styles/CourseItem.css
@@ -52,7 +52,7 @@
   font-size: 1rem;
 }
 
-.course-item > .instructors, .course-item > .instructors > span {
+.course-item > .instructors {
   display: flex;
   align-items: center;
   gap: 0.5rem;
