--- a/src/styles/CourseOverview.css
+++ b/src/styles/CourseOverview.css
@@ -1,6 +1,5 @@
 .course-overview .host, 
-.course-overview .instructors, 
-.course-overview .instructors > span,
+.course-overview .instructors,
 .course-overview .invited-instructors {
   display: flex;
   align-items: center;
